--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class = "menulinks">
                 <li><a href = "#about"  onclick = "toggleMenu()">About and Education</a></li>
-                <li><a href = "#experience_and_education"  onclick = "toggleMenu()">Experience</a></li>
+                <li><a href = "#experience_and_education"  onclick = "toggleMenu()">Skills</a></li>
                 <li><a href = "#projects"  onclick = "toggleMenu()">Projects</a></li>
                 <li><a href = "#contact"  onclick = "toggleMenu()">Contact</a></li>
             </div>
@@ -79,6 +79,60 @@
               <strong>UWCSEA Singapore:</strong> <br  /> IB Diploma with a final score of 44/45. <br  /> August 2018 - May 2022
             </p>
           </div>
+        </div>
+      </section>
+      <section id = "experience">
+        <p class = section_text_p1></p>
+        <h1 class = "title">Skills & Relevant Coursework</h1>
+        <div class = "experience-details-container">
+            <div class = "about-container">
+                <div class = "details-container">
+                    <h2 class = "experience-sub-title">Skills</h2>
+                    <div class = "article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt = "checkmark" class = "icon"/>
+                            <h3>Python</h3>
+                            <p>NumPy, Pandas, ML, Deep Learning, Data Visualization</p>
+                            <img src="./assets/checkmark.png" alt = "checkmark" class = "icon"/>
+                            <h3>SQL, Excel, and PowerPoint</h3>
+                            <p>For data analysis and presentation</p>
+                            <img src="./assets/checkmark.png" alt = "checkmark" class = "icon"/>
+                            <h3>Statistics & Econometrics</h3>
+                            <p>Modelling, regression analysis, hypothesis testing</p>
+                            <img src="./assets/checkmark.png" alt = "checkmark" class = "icon"/>
+                            <h3>Tableau</h3>
+                            <p>Data visualization dashboards</p>
+                            <img src="./assets/checkmark.png" alt = "checkmark" class = "icon"/>
+                            <h3>Java</h3>
+                            <p>Problem solving & OOP</p>
+                        </article>
+                    </div>
+                </div>
+            </div>
+            <div class = "about-container">
+                <div class = "details-container">
+                    <h2 class = "experience-sub-title">Relevant Coursework</h2>
+                    <div class = "article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt = "checkmark" class = "icon"/>
+                            <h3>Python</h3>
+                            <p>NumPy, Pandas, ML, Deep Learning, Data Visualization</p>
+                            <img src="./assets/checkmark.png" alt = "checkmark" class = "icon"/>
+                            <h3>SQL, Excel, and PowerPoint</h3>
+                            <p>For data analysis and presentation</p>
+                            <img src="./assets/checkmark.png" alt = "checkmark" class = "icon"/>
+                            <h3>Statistics & Econometrics</h3>
+                            <p>Modelling, regression analysis, hypothesis testing</p>
+                            <img src="./assets/checkmark.png" alt = "checkmark" class = "icon"/>
+                            <h3>Tableau</h3>
+                            <p>Data visualization dashboards</p>
+                            <img src="./assets/checkmark.png" alt = "checkmark" class = "icon"/>
+                            <h3>Java</h3>
+                            <p>Problem solving & OOP</p>
+                        </article>
+                    </div>
+                </div>
+            </div>
         </div>
       </section>
     <script src = "script.js"> </script>
