--- a/index.html
+++ b/index.html
@@ -141,6 +141,44 @@
             </div>
         </div>
     </section>
+    <section id="experience">
+        <h1 class="title">Experience</h1>
+        <div class="experience-details">
+            <img src="./assets/experience.png" alt="Experience Icon" class="icon">
+            <div class="role">
+                <p><strong>Project Team Data Scientist - Biokind Analytics</strong><br />
+                <span>02/2025 - Present</span></p>
+                <ul>
+                    <li>Providing data-driven solutions using Python to enhance non-profit healthcare analytics.</li>
+                    <li>Developing automated data solutions to streamline operations and data consistency.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="experience-details">
+            <img src="./assets/experience.png" alt="Experience Icon" class="icon">
+            <div class="role">
+                <p><strong>Product Management Intern - StoneX Global Payments</strong><br />
+                <span>05/2024 - 08/2024</span></p>
+                <ul>
+                    <li>Analyzed and reported on 2.4 million+ payment transactions using Python.</li>
+                    <li>Led development and testing of new payment technologies and products.</li>
+                    <li>Developed a payment processing module integrating with existing APIs.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="experience-details">
+            <img src="./assets/experience.png" alt="Experience Icon" class="icon">
+            <div class="role">
+                <p><strong>Business Planning and Administrative Intern - Adamas Salons</strong><br />
+                <span>09/2023 - 03/2024</span></p>
+                <ul>
+                    <li>Assisted in the development of a new business strategy for a mobile app product.</li>
+                    <li>Performed market analysis to identify potential investment and growth areas.</li>
+                </ul>
+            </div>
+        </div>
+        <!-- Add more roles as per the original list similarly -->
+    </section>
     <script src = "script.js"> </script>
 </body>
 </html>
