--- a/index.html
+++ b/index.html
@@ -147,10 +147,12 @@
             <img src="./assets/experience.png" alt="Experience Icon" class="icon">
             <div class="role">
                 <p><strong>Project Team Data Scientist - Biokind Analytics</strong><br />
-                <span>02/2025 - Present</span></p>
+                 <span>02/2025 - Present</span>
+                <br /> <span>New York University, NY</span></p>
                 <ul>
                     <li>Providing data-driven solutions using Python to enhance non-profit healthcare analytics.</li>
                     <li>Developing automated data solutions to streamline operations and data consistency.</li>
+                    <li>Presenting findings to client company through data visualization and business insights from their data.</li>
                 </ul>
             </div>
         </div>
@@ -158,11 +160,13 @@
             <img src="./assets/experience.png" alt="Experience Icon" class="icon">
             <div class="role">
                 <p><strong>Product Management Intern - StoneX Global Payments</strong><br />
-                <span>05/2024 - 08/2024</span></p>
+                <span>05/2024 - 08/2024</span>
+            <br /> <span>New York City, NY</span></p>
                 <ul>
-                    <li>Analyzed and reported on 2.4 million+ payment transactions using Python.</li>
-                    <li>Led development and testing of new payment technologies and products.</li>
-                    <li>Developed a payment processing module integrating with existing APIs.</li>
+                    <li>Analyzed and reported on 2.4 million+ payment transactions using Python and Excel.</li>
+                    <li>Led development and testing of new FX payment technologies and products.</li>
+                    <li>Produced business requirement documents (BRDs) for new product initiatives</li>
+                    <li>Created a master deck of StoneX Payments' client-specific product offerings on PowerPoint. </li>
                 </ul>
             </div>
         </div>
@@ -170,14 +174,56 @@
             <img src="./assets/experience.png" alt="Experience Icon" class="icon">
             <div class="role">
                 <p><strong>Business Planning and Administrative Intern - Adamas Salons</strong><br />
-                <span>09/2023 - 03/2024</span></p>
+                <span>09/2023 - 03/2024</span>
+                <br /> <span>Remote</span></p>
                 <ul>
                     <li>Assisted in the development of a new business strategy for a mobile app product.</li>
-                    <li>Performed market analysis to identify potential investment and growth areas.</li>
+                    <li>Performed market analysis to identify potential investment/partnership opportunities and growth areas.</li>
+                    <li>Prepared decks for potential investors and a crowdfunding campaign</li>
                 </ul>
             </div>
         </div>
-        <!-- Add more roles as per the original list similarly -->
+        <div class="experience-details">
+            <img src="./assets/experience.png" alt="Experience Icon" class="icon">
+            <div class="role">
+                <p><strong>Business Development Intern - ASATA</strong><br />
+                <span>12/2022 - 03/2023</span>
+                <br /> <span>Remote</span></p>
+                <ul>
+                    <li>Researched and pitched SEO services to emerging EdTech companies.</li>
+                    <li>Analyzed company performance through website traffic data and the use of SEO keywords.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="experience-details">
+            <img src="./assets/experience.png" alt="Experience Icon" class="icon">
+            <div class="role">
+                <p><strong>Academic Coach and Tutor - LessonPal</strong><br />
+                <span>07/2022 - 02/2023</span>
+                <br /> <span>Remote</span></p>
+                <ul>
+                    <li>Taught online individual lessons in Economics, Chemistry, and Mathematics.</li>
+                    <li>Prepared useful, organized resources and lesson plans for students.</li>
+                    <li>Ensured a productive user interface for lessons, adapting to each students' learning style.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="experience-details">
+            <img src="./assets/experience.png" alt="Experience Icon" class="icon">
+            <div class="role">
+                <p><strong>Dance Leader and Choreographer - UWCSEA Singapore</strong><br />
+                <span>01/2019 - 02/2022</span>
+                <br /> <span>Singapore</span></p>
+                <ul>
+                    <li>Choreographed dances for showcases over 3 years, contributing to raising over 5,000 SGD for Voice of World NGO</li>
+                    <li>Managed groups of up to 20 dances across 6 weeks for each performance cycle.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <h1 class="title">Projects</h1>
+
     </section>
     <script src = "script.js"> </script>
 </body>
