--- a/index.html
+++ b/index.html
@@ -223,8 +223,75 @@
     </section>
     <section id="projects">
         <h1 class="title">Projects</h1>
-
-    </section>
+            <div class="projects-container">
+                <!-- Project 1 -->
+                <div class="project-box">
+                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
+                    <h3>Project Title 1</h3>
+                    <ul>
+                        <li>Feature 1</li>
+                        <li>Feature 2</li>
+                        <li>Feature 3</li>
+                    </ul>
+                    <button class="btn github-btn" onclick="window.open('https://github.com/project1')">GitHub</button>
+                </div>
+                <!-- Project 2 -->
+                <div class="project-box">
+                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
+                    <h3>Project Title 2</h3>
+                    <ul>
+                        <li>Feature 1</li>
+                        <li>Feature 2</li>
+                        <li>Feature 3</li>
+                    </ul>
+                    <button class="btn github-btn" onclick="window.open('https://github.com/project2')">GitHub</button>
+                </div>
+                <!-- Project 3 -->
+                <div class="project-box">
+                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
+                    <h3>Project Title 3</h3>
+                    <ul>
+                        <li>Feature 1</li>
+                        <li>Feature 2</li>
+                        <li>Feature 3</li>
+                    </ul>
+                    <button class="btn github-btn" onclick="window.open('https://github.com/project3')">GitHub</button>
+                </div>
+                <!-- Project 4 -->
+                <div class="project-box">
+                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
+                    <h3>Project Title 4</h3>
+                    <ul>
+                        <li>Feature 1</li>
+                        <li>Feature 2</li>
+                        <li>Feature 3</li>
+                    </ul>
+                    <button class="btn github-btn" onclick="window.open('https://github.com/project4')">GitHub</button>
+                </div>
+                <!-- Project 5 -->
+                <div class="project-box">
+                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
+                    <h3>Project Title 5</h3>
+                    <ul>
+                        <li>Feature 1</li>
+                        <li>Feature 2</li>
+                        <li>Feature 3</li>
+                    </ul>
+                    <button class="btn github-btn" onclick="window.open('https://github.com/project5')">GitHub</button>
+                </div>
+                <!-- Project 6 -->
+                <div class="project-box">
+                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
+                    <h3>Project Title 6</h3>
+                    <ul>
+                        <li>Feature 1</li>
+                        <li>Feature 2</li>
+                        <li>Feature 3</li>
+                    </ul>
+                    <button class="btn github-btn" onclick="window.open('https://github.com/project6')">GitHub</button>
+                </div>
+            </div>
+        </section>        
     <script src = "script.js"> </script>
 </body>
 </html>
