--- a/index.html
+++ b/index.html
@@ -224,71 +224,67 @@
     <section id="projects">
         <h1 class="title">Projects</h1>
             <div class="projects-container">
-                <!-- Project 1 -->
+                <!-- project 1 -->
                 <div class="project-box">
-                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
-                    <h3>Project Title 1</h3>
+                    <img src="./assets/biokind.png" alt="Biokind Icon" class="icon"/>
+                    <h3>Biokind Analytics</h3>
                     <ul>
-                        <li>Feature 1</li>
-                        <li>Feature 2</li>
-                        <li>Feature 3</li>
+                        <li>Cleaning and merging client lists to create master lists for a healthcare nonprofit using Python.</li>
+                        <li>Analyzing the non-profit's client activity such as enrollment data across programs and client retention.</li>
+                        <li>Providing automated data entry and management solutions for more efficient future data collection practices.</li>
                     </ul>
-                    <button class="btn github-btn" onclick="window.open('https://github.com/project1')">GitHub</button>
+                    <button class="btn github-btn" onclick="window.open('https://www.biokind.org/')">More Info</button>
                 </div>
-                <!-- Project 2 -->
+                <!-- project 2 -->
                 <div class="project-box">
-                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
-                    <h3>Project Title 2</h3>
+                    <img src="./assets/stonex.png" alt="StoneX Icon" class="icon"/>
+                    <h3>StoneX Global Payments</h3>
                     <ul>
-                        <li>Feature 1</li>
-                        <li>Feature 2</li>
-                        <li>Feature 3</li>
+                        <li>Produced a payments report pulling data collected on PowerBI and analyzing it on Python.</li>
+                        <li>Created a dashboard showcasing top currency flows and quarterly payment trends. </li>
+                        <li>Communicated findings to the product team using data visualization through Tableau.</li>
+                        <li>Automated future data collection and storage to a centralized system.</li>
                     </ul>
-                    <button class="btn github-btn" onclick="window.open('https://github.com/project2')">GitHub</button>
+                    <button class="btn github-btn" onclick="window.open('https://www.stonex.com/en/payments/')">More Info</button>
                 </div>
-                <!-- Project 3 -->
+                <!-- project 3 -->
                 <div class="project-box">
-                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
-                    <h3>Project Title 3</h3>
+                    <img src="./assets/python.png" alt="python Icon" class="icon"/>
+                    <h3>Airline Ratings Analysis</h3>
                     <ul>
-                        <li>Feature 1</li>
-                        <li>Feature 2</li>
-                        <li>Feature 3</li>
+                        <li>Cleaned and analyzed airline passenger satisfaction data to determine what makes a 'good airline'.</li>
+                        <li>Used probability theory and machine learning to determine which factors are the greatest predictors of passenger satisfaction.</li>
+                        <li>Evaluated the findings in terms of recommendations for airlines to maximize ratings, visualized the data.</li>
                     </ul>
-                    <button class="btn github-btn" onclick="window.open('https://github.com/project3')">GitHub</button>
+                    <button class="btn github-btn" onclick="window.open('https://github.com/ananyadevraj/project-1')">GitHub</button>
                 </div>
-                <!-- Project 4 -->
+                <!-- project 4 -->
                 <div class="project-box">
-                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
-                    <h3>Project Title 4</h3>
+                    <img src="./assets/canva.png" alt="canva Icon" class="icon"/>
+                    <h3>Business Outline: AI Travel Planning Startup</h3>
                     <ul>
-                        <li>Feature 1</li>
-                        <li>Feature 2</li>
-                        <li>Feature 3</li>
+                        <li>Designed the user interface for a travel planning startup's website. </li>                        <li>Includes a website landing page deck outlining the main features.</li>
+                        <li>Models additional pages with more information, a 'traveler type' quiz for personalized recommendations, and an about section.</li>
+                        <li>Features an animated explanation (created on Canva) of the vision board search function.</li>
                     </ul>
-                    <button class="btn github-btn" onclick="window.open('https://github.com/project4')">GitHub</button>
+                    <button class="btn github-btn" onclick="window.open('https://github.com/ananyadevraj/travel')">GitHub</button>
                 </div>
-                <!-- Project 5 -->
-                <div class="project-box">
-                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
-                    <h3>Project Title 5</h3>
-                    <ul>
-                        <li>Feature 1</li>
-                        <li>Feature 2</li>
-                        <li>Feature 3</li>
-                    </ul>
-                    <button class="btn github-btn" onclick="window.open('https://github.com/project5')">GitHub</button>
+             
+        </section>        
+        <section id="contact">
+            <h1 class="title">Contact</h1>
+            <div class="contact-container">
+                <div class="contact-item">
+                    <img src="./assets/email.png" alt="Email Icon" class="contact-icon">
+                    <a href="mailto:ad6112@nyu.edu.com">ananyadevraj@nyu.edu</a>
                 </div>
-                <!-- Project 6 -->
-                <div class="project-box">
-                    <img src="./assets/project-icon.png" alt="Project Icon" class="project-icon"/>
-                    <h3>Project Title 6</h3>
-                    <ul>
-                        <li>Feature 1</li>
-                        <li>Feature 2</li>
-                        <li>Feature 3</li>
-                    </ul>
-                    <button class="btn github-btn" onclick="window.open('https://github.com/project6')">GitHub</button>
+                <div class="contact-item">
+                    <img src="./assets/linkedin.png" alt="LinkedIn Icon" class="contact-icon">
+                    <a href="https://linkedin.com/in/ananyadevraj" target="_blank">LinkedIn Profile</a>
+                </div>
+        
+                <div class="contact-item">
+                    <p>New York City,<br> New York, USA</p>
                 </div>
             </div>
         </section>        
