--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
             </div>
             <div id = "socials-container">
-                <img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://linkedin.com/in/ananyadevraj/'" />
-                <img src="./assets/github.png" alt="My GitHub Profile" class="icon" onclick="location.href='https://github.com/ananyadevraj/'" />
+                <img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://linkedin.com/in/ananyadevraj/'" target="_blank" />
+                <img src="./assets/github.png" alt="My GitHub Profile" class="icon" onclick="location.href='https://github.com/ananyadevraj/'" target="_blank" />
                 
             </div>
         </div>
