--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
                 <button class = "btn btn-color-1" onclick = "location.href='./#contact'">Contact Info</button>
 
             </div>
-            <div id = "socials-container">
-                <img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://linkedin.com/in/ananyadevraj/'" target="_blank" />
-                <img src="./assets/github.png" alt="My GitHub Profile" class="icon" onclick="location.href='https://github.com/ananyadevraj/'" target="_blank" />
-                
+            <div id="socials-container">
+                <a href="https://linkedin.com/in/ananyadevraj/" target="_blank">
+                    <img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon" />
+                </a>
+                <a href="https://github.com/ananyadevraj/" target="_blank">
+                    <img src="./assets/github.png" alt="My GitHub Profile" class="icon" />
+                </a>
             </div>
         </div>
     </section>
