--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 </p>
                 <ul>
                     <li>Taught online individual lessons in Economics, Chemistry, and Mathematics.</li>
-                    <li><a href = "https://ananyasnotes.notion.site/dac488cbfb0144b6a37ce72c1f108817?v=66609fb7fe054059a4d435a022057919 >View my notes and resources site shared with IB Diploma students for tutoring.</a> </li>
+                    <li> <a href = "https://ananyasnotes.notion.site/dac488cbfb0144b6a37ce72c1f108817?v=66609fb7fe054059a4d435a022057919">View my notes and resources site shared with IB Diploma students for tutoring.</a> </li>
                     <li>Prepared useful, organized resources and lesson plans for students.</li>
                     <li>Ensured a productive user interface for lessons, adapting to each students' learning style.</li>
                 </ul>
