--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
                 <img src="./assets/biokind.png" alt="Biokind Icon" class="icon"/>
                 <h3>Biokind Analytics</h3>
                 <ul>
-                    <li>Cleaning and merging client lists to create master lists for a healthcare nonprofit using Python.</li>
-                    <li>Analyzing the non-profit's client activity such as enrollment data across programs and client retention.</li>
-                    <li>Providing automated data entry and management solutions for more efficient future data collection practices.</li>
+                    <li>Automated master client list generation for a healthcare nonprofit using Python.</li>
+                    <li>Created an app using Streamlit with a simple UI, allowing users to generate master client lists by uploading sheets without hassle and setup.</li>
+                    <li>Provided efficient data analysis and client activity management solutions by integrating data visualizations into the Streamlit app.</li>
                 </ul>
                 <button class="btn github-btn" onclick="window.open('https://www.biokind.org/')">More Info</button>
             </div>
