--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                     <br /> <span>New York University, NY</span>
                 </p>
                 <ul>
-                    <li>Providing data-driven solutions using Python to enhance non-profit healthcare analytics.</li>
-                    <li>Developing automated data solutions to streamline operations and data consistency.</li>
-                    <li>Presenting findings to client company through data visualization and business insights from their data.</li>
+                    <li>Providing automated, data-driven solutions using Python to enhance non-profit healthcare analytics.</li>
+                    <li>Organized future data-entry and management processes to allow for more effiency and improved data collection for the client.</li>
+                    <li>Delivered a user-friendly Streamlit application to the client that can run analytics, and produce downloadable visuals & master lists based on their data.</li>
                 </ul>
             </div>
         </div>
