--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         </div>
         <div class="section_text">
             <p class="section_text_p1">
+                <br />
+                <br />
                 Hi! I'm
             </p>
             <h1 class="title">Ananya Devraj</h1>
@@ -167,7 +169,7 @@
         <div class="experience-details">
             <i class="fas fa-briefcase experience-icon"></i>
             <div class="role">
-                <p><strong>Project Team Data Scientist - Biokind Analytics</strong><br />
+                <p><strong>Vice President - Biokind Analytics</strong><br />
                     <span>02/2025 - Present</span>
                     <br /> <span>New York University, NY</span>
                 </p>
@@ -261,6 +263,17 @@
                     <li>Provided efficient data analysis and client activity management solutions by integrating data visualizations into the Streamlit app.</li>
                 </ul>
                 <button class="btn github-btn" onclick="window.open('https://github.com/ananyadevraj/script_example')">GitHub</button>
+            </div>
+            <div class="project-box">
+                <img src="./assets/" alt="Java Icon" class="icon"/>
+                <h3>Card Game with GUI: Java</h3>
+                <ul>
+                    <li>Implemented a visual War card game using Java Swing with custom singly linked list data structure to manage card decks and gameplay mechanics</li>
+                    <li>Designed a generic MyList class implementing LinkedList interface with methods for insertion, deletion, and traversal operations for efficient card management</li>
+                    <li>Created an elegant GUI featuring real-time card visualization, score tracking, and interactive gameplay with 26-round tournament format and automatic winner determination</li>
+                    <li>Integrated external card image resources with fallback text rendering, demonstrating proficiency in Java graphics, event handling, and object-oriented design principles</li>
+                </ul>
+                <button class="btn github-btn" onclick="window.open('https://github.com/ananyadevraj/java_project')">GitHub</button>
             </div>
             <div class="project-box">
                 <img src="./assets/stonex.png" alt="StoneX Icon" class="icon"/>
