--- a/index.html
+++ b/index.html
@@ -268,10 +268,10 @@
                 <img src="./assets/" alt="Java Icon" class="icon"/>
                 <h3>Card Game with GUI: Java</h3>
                 <ul>
-                    <li>Implemented a visual War card game using Java Swing with custom singly linked list data structure to manage card decks and gameplay mechanics</li>
-                    <li>Designed a generic MyList class implementing LinkedList interface with methods for insertion, deletion, and traversal operations for efficient card management</li>
-                    <li>Created an elegant GUI featuring real-time card visualization, score tracking, and interactive gameplay with 26-round tournament format and automatic winner determination</li>
-                    <li>Integrated external card image resources with fallback text rendering, demonstrating proficiency in Java graphics, event handling, and object-oriented design principles</li>
+                    <li>Implemented a visual card game using Java Swing with custom singly linked list data structure to manage decks and gameplay mechanics</li>
+                    <li>Designed a generic MyList class implementing LinkedList interface with methods and operations for efficient card management</li>
+                    <li>Created a GUI for interactive gameplay and integrated external card image resources with fallback text rendering</li>
+                    <li>Demonstrating proficiency in Java graphics, event handling, and object-oriented design principles</li>
                 </ul>
                 <button class="btn github-btn" onclick="window.open('https://github.com/ananyadevraj/java_project')">GitHub</button>
             </div>
