--- a/index.html
+++ b/index.html
@@ -166,6 +166,21 @@
     </section>
     <section id="experience">
         <h1 class="title">Experience</h1>
+          <div class="experience-details">
+            <i class="fas fa-briefcase experience-icon"></i>
+            <div class="role">
+                <p><strong>Product Management Intern - StoneX Global Payments</strong><br />
+                    <span>05/2024 - 08/2024 and 05/2025 - 08/2025</span>
+                    <br /> <span>New York City, NY</span>
+                </p>
+                <ul>
+                    <li>Analyzed and reported on 2.4 million+ payment transactions using Python and Excel.</li>
+                    <li>Led development and testing of new FX payment technologies and products.</li>
+                    <li>Produced business requirement documents (BRDs) for new product initiatives</li>
+                    <li>Created a master deck of StoneX Payments' client-specific product offerings on PowerPoint. </li>
+                </ul>
+            </div>
+        </div>
         <div class="experience-details">
             <i class="fas fa-briefcase experience-icon"></i>
             <div class="role">
@@ -177,21 +192,6 @@
                     <li>Providing automated, data-driven solutions using Python to enhance non-profit healthcare analytics.</li>
                     <li>Organized future data-entry and management processes to allow for more effiency and improved data collection for the client.</li>
                     <li>Delivered a user-friendly Streamlit application to the client that can run analytics, and produce downloadable visuals & master lists based on their data.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="experience-details">
-            <i class="fas fa-briefcase experience-icon"></i>
-            <div class="role">
-                <p><strong>Product Management Intern - StoneX Global Payments</strong><br />
-                    <span>05/2024 - 08/2024</span>
-                    <br /> <span>New York City, NY</span>
-                </p>
-                <ul>
-                    <li>Analyzed and reported on 2.4 million+ payment transactions using Python and Excel.</li>
-                    <li>Led development and testing of new FX payment technologies and products.</li>
-                    <li>Produced business requirement documents (BRDs) for new product initiatives</li>
-                    <li>Created a master deck of StoneX Payments' client-specific product offerings on PowerPoint. </li>
                 </ul>
             </div>
         </div>
@@ -267,11 +267,12 @@
             <div class="project-box">
                 <img src="./assets/" alt="Java Icon" class="icon"/>
                 <h3>Card Game with GUI: Java</h3>
+                
                 <ul>
-                    <li>Implemented a visual card game using Java Swing with custom singly linked list data structure to manage decks and gameplay mechanics</li>
-                    <li>Designed a generic MyList class implementing LinkedList interface with methods and operations for efficient card management</li>
-                    <li>Created a GUI for interactive gameplay and integrated external card image resources with fallback text rendering</li>
-                    <li>Demonstrating proficiency in Java graphics, event handling, and object-oriented design principles</li>
+                  <li>Built a visual War card game in Java Swing using custom singly linked list data structure for deck management</li>
+                  <li>Implemented generic MyList class with insertion, deletion, and traversal operations for efficient card handling</li>
+                  <li>Created interactive GUI with real-time gameplay, score tracking, and external card image integration</li>
+                  <li>Demonstrated Java graphics, event handling, and object-oriented programming principles</li>
                 </ul>
                 <button class="btn github-btn" onclick="window.open('https://github.com/ananyadevraj/java_project')">GitHub</button>
             </div>
