--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <button class="btn github-btn" onclick="window.open('https://github.com/ananyadevraj/script_example')">GitHub</button>
             </div>
             <div class="project-box">
-                <img src="./assets/" alt="Java Icon" class="icon"/>
+                <img src="./assets/java.png" alt="Java Icon" class="icon"/>
                 <h3>Card Game with GUI: Java</h3>
                 
                 <ul>
