--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./mediaqueries.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" type="image/png" href="./assets/favicon.png">
-
 </head>
 <body>
 
@@ -136,7 +135,7 @@
                     <i class="fab fa-python"></i>
                 </div>
                 <h3>Python</h3>
-                <p>NumPy, Pandas, ML, Deep Learning, Data Visualization</p>
+                <p>NumPy, Pandas, automation/scripting, web scraping, data pipelines</p>
             </div>
 
             <div class="skill-card" >
@@ -159,8 +158,8 @@
                 <div class="skill-icon">
                     <i class="fas fa-chart-bar"></i>
                 </div>
-                <h3>Tableau</h3>
-                <p>Data visualization dashboards</p>
+                <h3>Data Visualization</h3>
+                <p>Tableau + Seaborn, Plotly & other Python libraries</p>
             </div>
 
             <div class="skill-card" >
@@ -175,9 +174,24 @@
                 <div class="skill-icon">
                     <i class="fas fa-table"></i>
                 </div>
-                <h3>Excel & PowerPoint</h3>
-                <p>Business analytics and presentations</p>
+                <h3>Business Intelligence & Reporting</h3>
+                <p>PowerBI, Excel, Powerpoint</p>
             </div>
+            <div class="skill-card">
+    <div class="skill-icon">
+        <i class="fas fa-brain"></i>
+    </div>
+    <h3>Machine Learning</h3>
+    <p>Classification, regression, model evaluation, scikit-learn</p>
+</div>
+
+<div class="skill-card">
+    <div class="skill-icon">
+        <i class="fas fa-project-diagram"></i>
+    </div>
+    <h3>Product Management</h3>
+    <p>Agile development, user research & testing, roadmap planning</p>
+</div>
         </div>
 
         <div class="coursework-section">
