--- a/index.html
+++ b/index.html
@@ -201,10 +201,13 @@
                 <span class="course-tag">Data Structures</span>
                 <span class="course-tag">Statistics & Econometrics</span>
                 <span class="course-tag">Linear Algebra</span>
+                <span class="course-tag">Calculus I-III</span>
                 <span class="course-tag">Microeconomics</span>
                 <span class="course-tag">Macroeconomics</span>
                 <span class="course-tag">Computer Science Fundamentals</span>
                 <span class="course-tag">Machine Learning</span>
+                <span class="course-tag">Database Management & Design</span>
+                <span class="course-tag">Responsible Data Science</span>
             </div>
         </div>
     </section>
