--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 </h1>
                 <p class="section_text_p2">Data Science & Economics @ NYU</p>
                 <p class="section_text_p3">Turning data into insights, ideas into impact</p>
+                <a href="https://ananyadevraj.github.io/chromatic_geography/" target="_blank" class="featured-project-link">
+                    Featured Project: Chromatic Geography Visual Data Essay
+                </a>
                 <div class="btn-container">
                     <button class="btn btn-color-1" onclick="window.open('./assets/resume.pdf')">
                         <i class="fas fa-file-download"></i> Resume
@@ -335,6 +338,30 @@
         </div>
 
         <div class="projects-grid">
+            <div class = "project-card">
+                    <div class="project-content">
+        <div class="project-title-wrapper">
+            <div style="width: 40px; height: 40px; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
+                <img src="./assets/chromatic.png" alt="Chromatic Geography" class="project-logo"/>
+            </div>
+            <h3>Chromatic Geography</h3>
+        </div>
+        <p class="project-description">Visual essay analyzing the color palettes of 12 cities worldwide using images as data. Extracted dominant colors from 1,800 images.</p>
+        <ul class="project-highlights">
+            <li>ColorThief algorithm for color extraction</li>
+            <li>Temperature & saturation analysis across cities</li>
+            <li>Interactive scrollytelling visualization</li>
+        </ul>
+        <div class="project-tags">
+            <span class="tag">Python</span>
+            <span class="tag">Data Viz</span>
+            <span class="tag">HTML/CSS/JS</span>
+        </div>
+        <button class="btn project-btn" onclick="window.open('https://ananyadevraj.github.io/chromatic_geography/')">
+            <i class="fas fa-external-link-alt"></i> View Project
+        </button>
+    </div>
+            </div>
             <div class="project-card">
                 <div class="project-content">
                     <div class="project-title-wrapper">
